refactor: prepare build for Java8